--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap");
 @import "tailwindcss";
+
+
+html, body {
+  font-family: 'Poppins', sans-serif;
+}
 
 :root {
   --background: #ffffff;
@@ -17,10 +23,4 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
 }
