--- a/app/COMMON/footer.css
+++ b/app/COMMON/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background: var(--50, #EBEFFA);
+    background: #FCFDFD;
     padding: 40px 70px 40px;
     font-size: 14px;
     color: #1d1e2c;
