--- a/app/COMMON/footer.css
+++ b/app/COMMON/footer.css
@@ -9,7 +9,6 @@
     grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
     gap: 40px;
     display: grid;
-    /* padding: 0px 60px; */
     max-width: 1440px;
     margin: 0 auto;
 }
@@ -34,6 +33,10 @@
 .footer-section ul li a {
     color: #1d1e2c;
     text-decoration: none;
+}
+
+.footer-section ul li a:hover {
+    text-decoration: underline;
 }
 
 .footer-logo {
@@ -91,12 +94,12 @@
 
 @media (max-width: 768px) {
     .footer {
-        padding: 30px 20px;
+        padding: 30px 35px;
         font-size: 13px;
     }
 
     .footer-container {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(3, 1fr);
         gap: 30px;
     }
 
@@ -124,8 +127,30 @@
 
     .footer-bottom {
         flex-direction: column;
-        align-items: center;
+        /* align-items: center; */
         gap: 10px;
         font-size: 12px;
+    }
+}
+@media (max-width: 600px) {
+    .footer {
+        padding: 30px 35px;
+        font-size: 13px;
+    }
+
+    .footer-container {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+    }
+}
+@media (max-width: 380px) {
+    .footer {
+        padding: 30px 35px;
+        font-size: 13px;
+    }
+
+    .footer-container {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px;
     }
 }
