--- a/app/partner-registration/PartnerRegistration/registration.css
+++ b/app/partner-registration/PartnerRegistration/registration.css
@@ -12,18 +12,22 @@
 .form-header h1 {
   font-size: 42px;
   font-weight: 700;
+  margin-bottom: 10px;
 }
 
 .form-header p {
-  font-size: 18px;
   color: #555;
+  font-size: 18px;
+  width: 50%;
+  margin: auto;
 }
 
 .form-wrapper {
   position: relative;
+  margin: 0 auto;
+  max-width: 1720px;
 }
 
-/* Decorative Images */
 .decor-image {
   position: absolute;
   z-index: 0;
@@ -32,14 +36,14 @@
 
 .contact-right {
   width: 334px;
-    top: -15px;
-    right: 5px;
+  top: -15px;
+  right: 5px;
 }
 
 .additional-left {
   width: 334px;
-    top: 46rem;
-    left: -1px;
+  top: 46rem;
+  left: -1px;
 }
 
 .form-sections {
@@ -93,11 +97,15 @@ textarea {
 .select-dropdown,
 .text-input {
   margin-bottom: 20px;
+  resize: none;
 }
 
 .checkbox {
   margin-top: 12px;
   font-size: 14px;
+  display: flex;
+  align-items: center;
+  gap: 10px
 }
 
 .checkbox-group {
@@ -126,7 +134,7 @@ textarea {
   font-weight: 600;
   color: white;
   background-color: #3b5cd6;
-  border: none;
+  border: 1px solid #3b5cd6;
   border-radius: 6px;
   align-self: center;
   cursor: pointer;
@@ -135,17 +143,19 @@ textarea {
   max-width: 1300px;
   margin-left: auto;
   margin-right: auto;
+  transition: background-color 0.3s ease;
 }
 
 .submit-btn:hover {
-  background-color: #2949bd;
+  background-color: #fff;
+  color: #3b5cd6;
+  border: 1px solid #3b5cd6;
 }
 
 .disclaimer-text {
   font-size: 15px;
 }
 
-/* Responsive Styles */
 @media screen and (max-width: 1300px) {
   .form-sections {
     width: 100%;
