--- a/app/COMMON/footer.css
+++ b/app/COMMON/footer.css
@@ -48,9 +48,10 @@
 }
 
 .footer-desc {
-    color: #4d4f63;
-    font-size: 13px;
-    max-width: 200px;
+        color: #4d4f63;
+    max-width: 240px;
+    font-weight: 500;
+    font-size: 14px;
 }
 
 .footer-section p {
@@ -81,14 +82,14 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    font-size: 13px;
-    /* max-width: 1px; */
+    font-size: 13px; 
     margin-inline: auto;
 }
 
-.footer-bottom a {
+.footer-bottom a , .footer-bottom p {
     color: #1d1e2c;
     text-decoration: none;
+    font-weight: 500;
 }
 
 
@@ -127,7 +128,6 @@
 
     .footer-bottom {
         flex-direction: column;
-        /* align-items: center; */
         gap: 10px;
         font-size: 12px;
     }
@@ -143,7 +143,7 @@
         gap: 20px;
     }
 }
-@media (max-width: 380px) {
+@media (max-width: 480px) {
     .footer {
         padding: 30px 35px;
         font-size: 13px;
