--- a/app/about-us/AboutSec2/aboutsec2.css
+++ b/app/about-us/AboutSec2/aboutsec2.css
@@ -11,7 +11,7 @@
 
 .why-header h2 {
   font-size: 42px;
-  font-weight: 500;
+  font-weight: 600;
   margin-bottom: 10px;
   color: #1e1e1e;
 }
@@ -54,7 +54,6 @@
   color: #2B353B;
   line-height: 1.6;
   text-align: left;
-
 }
 
 
@@ -92,13 +91,35 @@
 }
 
 @media screen and (max-width: 480px) {
-  .why-header {
-    text-align: left;
+  .why-section {
+    padding: 30px 35px;
   }
 
-  .why-card {
+  .why-header {
     text-align: left;
     padding: 0;
   }
 
+  .why-header h2 {
+    font-size: 30px;
+  }
+
+  .why-card {
+    text-align: left;
+    padding: 16px 0;
+  }
+
+  .why-card h3 {
+    font-size: 18px;
+  }
+
+  .why-card p {
+    font-size: 14px;
+  }
+
+  .why-icon img {
+    width: 48px;
+    height: 48px;
+  }
 }
+
