--- a/app/customizer-partner/CtaSection/ctasection.css
+++ b/app/customizer-partner/CtaSection/ctasection.css
@@ -13,10 +13,11 @@
   border-radius: 10px;
   padding: 40px 30px;
   text-align: center;
+  border: 2px solid #793AAF;
 }
 
 .cta-title {
-  font-size: 24px;
+  font-size: 28px;
   font-weight: 600;
   color: #111827;
   margin-bottom: 12px;
@@ -24,7 +25,8 @@
 
 .cta-subtext {
   font-size: 16px;
-  color: #555;
+  color: #2e2c2c;
+  font-weight: 500;
   margin-bottom: 24px;
 }
 
@@ -35,16 +37,17 @@
   padding: 12px 24px;
   border-radius: 6px;
   font-size: 14px;
+    font-weight: 500;
   text-decoration: none;
   transition: background-color 0.3s ease;
-  border: 1px solid #1d4ed8;
+  border: 2px solid #1d4ed8;
 
 }
 
 .cta-btn:hover {
   background-color: #fff;
   color: #1d4ed8;
-  border: 1px solid #1d4ed8;
+  border: 2px solid #1d4ed8;
 }
 
 @media (max-width: 768px) {
