--- a/app/customizer-partner/WhyChooseCutomizer/WhyChooseCustomizer.css
+++ b/app/customizer-partner/WhyChooseCutomizer/WhyChooseCustomizer.css
@@ -40,29 +40,31 @@
 .why-icon {
   margin-bottom: 16px;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .why-icon img {
-  width: 54px;
-  height: 54px;
+  width: 60px;
+  height: 60px;
 }
 
 .why-card h3 {
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 600;
   color: #2B353B;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
+  text-align: left;
 }
 
 .why-card p {
   font-size: 0.95rem;
   color: #2B353B;
   line-height: 1.6;
+  text-align: left;
 }
 
-.trusted {
-  padding-top: 80px;
+.trustedd {
+  padding-top:80px;
 }
 
 .trusted-heading {
