--- a/app/components/integrationsec.css
+++ b/app/components/integrationsec.css
@@ -70,6 +70,10 @@
     padding: 32px;
   }
 
+  .integration-content{
+    text-align: left;
+  }
+
   .integration-content h2 {
     width: 100%;
     font-size: 32px;
@@ -84,16 +88,20 @@
  
 @media (max-width: 768px) {
   .integration-content h2 {
-    font-size: 24px;
+    font-size: 28px;
+  }
+
+  .integration-content{
+    text-align: left;
   }
 
   .integration-logos {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     min-width: 70%;
   }
 
   .logo-box img {
-    max-width: 100px;
+    max-width: 200px;
   }
 }
 
@@ -108,8 +116,8 @@
   }
 
   .integration-content{
-    text-align: center;
-    min-width: 40%;
+    text-align: left;
+    min-width: 30%;
   }
 
   .integration-content h2 {
@@ -118,12 +126,18 @@
   }
 
   .integration-logos {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 16px;
   }
 
   .logo-box img {
     max-width: 80px;
+  }
+}
+
+@media (max-width: 360px) {
+  .logo-box img {
+    max-width: 60px;
   }
 }
 
