--- a/app/components/message.css
+++ b/app/components/message.css
@@ -66,36 +66,17 @@
   object-fit: contain;
 }
 
-
-@media (max-width: 768px) {
-  .message-container {
-    grid-template-columns: 1fr;
-    text-align: center;
-  }
-
-  .message-text h2 {
-    font-size: 28px;
-  }
-
-  .message-text p {
-    font-size: 15px;
-  }
-
-  .message-image {
-    margin-top: 32px;
-  }
-}
-
-
 @media (max-width: 768px) {
   .important-message-section {
-    padding: 50px 15px;
+    padding: 50px 20px;
   }
 
   .message-container {
+    text-align: left;
     grid-template-columns: 1fr;
-    text-align: center;
     gap: 30px;
+    display: flex;
+    flex-direction: column-reverse;
   }
 
   .message-text h2 {
