--- a/app/about-us/AboutSec4/aboutsec4.css
+++ b/app/about-us/AboutSec4/aboutsec4.css
@@ -1,6 +1,7 @@
 .aboutsec4-section {
     padding: 60px 60px;
-    background-color: #f9fafb;
+    background: #FFFFFF;
+
 }
 
 .aboutsec4-container {
@@ -22,15 +23,15 @@
         color: #111827;
     margin-bottom: 16px;
     font-size: 36px;
-    font-weight: 600;
+    font-weight:500;
     line-height: 44px;
 }
 
 .aboutsec4-content p {
-    font-size: 14px;
+    font-size: 16px;
+    line-height: 1.5;
     color: #4b5563;
     margin-bottom: 24px;
-    line-height: 1.6;
 }
 
 .aboutsec4-btn {
