--- a/app/COMMON/navbar.css
+++ b/app/COMMON/navbar.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Karantina:wght@400;700&display=swap");
 
 .navbar {
-    background-color: #fff;
+    background: #FFFFFF;
     padding: 16px 0;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.05);
     border-bottom: 1px solid #d7def4;
@@ -124,7 +124,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 12px 16px;
-    font-size: 15px;
+    font-size: 16px;
     font-weight: 500;
     color: #1f1f1f;
     text-decoration: none;
@@ -136,7 +136,7 @@
     background-color: #D7DEF4;
 }
 
-#toys-kinds:hover {
+#bakery-row:hover {
     background-color: #D7DEF4;
     border-top-left-radius: 13px;
     border-top-right-radius: 13px;
