--- a/app/components/integrationsec.css
+++ b/app/components/integrationsec.css
@@ -22,22 +22,33 @@
   min-width: 280px;
 }
 
-.integration-content .tag {
+.integration-content button {
   display: inline-block;
   padding: 6px 16px;
-  border: 1px solid #2d60f6;
-  color: #2d60f6;
+  border: 1px solid #3559C7;
+  color: #3559C7;
   font-size: 14px;
+  font-weight: 500;
   border-radius: 8px;
   margin-bottom: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+
+}
+
+.integration-content button:hover {
+  background-color: #3559C7;
+  color: #fff;
+  border: 1px solid #3559C7;
+
 }
 
 .integration-content h2 {
-  color: #0a0a0a;
-  font-size: 40px;
-  font-weight: 600;
-  line-height: 1.3;
-  width: 75%;
+      color: #0a0a0a;
+    width: 67%;
+    font-size: 44px;
+    font-weight: 500;
+    line-height: 1.2;
 }
  
 .integration-logos {
