--- a/app/contact/FaqSection/faqsec.css
+++ b/app/contact/FaqSection/faqsec.css
@@ -17,15 +17,16 @@
 }
 
 .faq-left h2 {
-    font-size: 35px;
+    font-size: 36px;
     font-weight: 500;
     color: #0a0a0a;
     margin-bottom: 12px;
+    line-height: 1.2;
 }
 
 .faq-left p {
     color: #555;
-    font-size: 15px;
+    font-size: 16px;
     max-width: 440px;
 }
 
