--- a/app/partner-registration/PartnerRegistration/registration.css
+++ b/app/partner-registration/PartnerRegistration/registration.css
@@ -1,5 +1,5 @@
 .partner-form {
-  padding: 40px 20px;
+  padding: 40px 60px;
   background-color: #f8fafa;
   margin-top: 85px;
 }
@@ -11,7 +11,7 @@
 
 .form-header h1 {
   font-size: 42px;
-  font-weight: 700;
+  font-weight: 500;
   margin-bottom: 10px;
 }
 
@@ -64,7 +64,7 @@
 }
 
 .form-heading {
-  font-weight: 600;
+  font-weight: 500;
   font-size: 25px;
   margin-bottom: 16px;
   text-align: center;
@@ -118,8 +118,10 @@ textarea {
 }
 
 .checkbox-group label {
-  display: block;
-  margin-bottom: 6px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 12px;
   font-size: 14px;
 }
 
@@ -131,7 +133,7 @@ textarea {
 .submit-btn {
   padding: 14px 28px;
   font-size: 16px;
-  font-weight: 600;
+  font-weight: 500;
   color: white;
   background-color: #3b5cd6;
   border: 1px solid #3b5cd6;
@@ -156,10 +158,64 @@ textarea {
   font-size: 15px;
 }
 
+.disclaimer-text a {
+  text-decoration: underline;
+  width: 100%;
+}
+
+.custom-select {
+  position: relative;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.custom-select select {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  padding: 10px 40px 10px 14px;
+  font-size: 14px;
+  width: 100%;
+  border-radius: 6px;
+  cursor: pointer;
+  position: relative;
+  z-index: 2;
+}
+
+.custom-select-icon {
+  position: absolute;
+  top: 50%;
+  right: 14px;
+  transform: translateY(-50%);
+  pointer-events: none;
+  font-size: 24px;
+  color: #2B353B;
+  z-index: 3;
+}
+.custom-select {
+  position: relative;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.custom-select select {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  padding: 10px 40px 10px 14px;
+  font-size: 14px;
+  width: 100%;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
 @media screen and (max-width: 1300px) {
   .form-sections {
     width: 100%;
-    /* padding: 0 20px; */
   }
 
   .submit-btn {
@@ -188,6 +244,12 @@ textarea {
   .decor-image {
     display: none;
   }
+
+   .custom-select select {
+    font-size: 14px;
+    line-height: 1.4;
+    white-space: normal;
+  }
 }
 
 @media screen and (max-width: 480px) {
@@ -195,3 +257,4 @@ textarea {
     padding: 40px 20px;
   }
 }
+
