--- a/app/components/logobar.css
+++ b/app/components/logobar.css
@@ -1,5 +1,4 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
-
+/* 
 .trusted-section {
     background: radial-gradient(ellipse at bottom right,
             #f8eae0 0%,
@@ -7,7 +6,6 @@
         radial-gradient(ellipse at top left, #e7ebf8 0%, transparent 60%);
     padding: 60px 20px;
     text-align: center;
-    font-family: "Poppins", sans-serif;
 }
 
 .trusted-container {
@@ -27,7 +25,6 @@
     justify-content: center;
     align-items: center;
     gap: 50px;
-    flex-wrap: wrap;
 }
 
 .brand-logo img {
